# Masterarbeit

./: .gitignore  Dockerfile  Master.bib  My Library.bib  TPCH.drawio  TrinoLivePlan_Agg.drawio  TrinoLivePlan_Agg_distinct.drawio  TrinoLivePlan_Agg_window.drawio  TrinoLivePlan_Base.drawio  TrinoLivePlan_Join.drawio  TrinoLivePlan_Join_Anit.drawio  TrinoLivePlan_OrderByx.drawio  bash_hive.txt  commands.txt  credentials.json  data  docker-compose.yml  ideas.txt  order_stats.txt  part_stats.txt  queries.txt  settings.txt
Figures/: aggregation_tables.drawio  example_query.drawio  manafile.drawio  memory_tiers (1).drawio  memory_tiers (2).drawio  multithreading.drawio  multithreading2.drawio  partitions.drawio
Figures/Tpc_20_trino/: Tpc_20Query.drawio
Figures/mulits/: mult_spillreal.drawio (1).drawio  multi_merge.drawio
Figures/presi/: multithreading2.drawio  split_bar_darw.drawio
HM_3_M_2/: AGG_AVG.txt  Join_hashmap_Spill.txt
aggregator/: CMakeLists.txt  test  text.cpp
docker_setup.tar/: docker_setup.tar
logs/: Analyse.py  Model.py
logs/Aggregate/: Agg_6_1_1_1200.txt  Agg_6_1_1_1400.txt  Agg_6_1_1_1600.txt
logs/c++_logs/: nohup.out  output.txt  stats.txt  times_12-17_22-04.csv  times_13_4_0_10_10-28.csv  times_13_4_0_10_10-32.csv  times_13_4_0_10_10-35.csv  times_13_4_0_10_12-17.csv  times_13_4_0_10_12-20.csv  times_13_4_0_10_12-24.csv  times_13_6_0_4_17-15.csv  times_13_6_0_4_21-00.csv  times_2024-11-25.14_19_25.csv  times_20_10_0_10_15-08.csv  times_20_10_0_10_15-11.csv  times_20_10_0_10_15-19.csv  times_20_10_0_10_15-47.csv  times_20_3_0_10_16-02.csv  times_20_6_0_10_13-55.csv  times_20_6_0_10_14-04.csv  times_20_6_0_10_14-34.csv  times_20_6_0_10_14-55.csv  times_4_6_0_20_12-01.csv  times_4_6_0_4_14-43.csv  times_4_6_0_4_14-55.csv  times_4_6_0_4_15-07.csv  times_4_6_0_4_15-24.csv
logs/figs/: manafile
logs/tpc/: queries.txt  queries_pretty.txt  tpc3-.txt  tpc_11.json  tpc_13.json  tpc_13_1(failed).json  tpc_13_4_100.json  tpc_13_4_1000(failed).json  tpc_13_4_1000.json  tpc_13_4_300.json  tpc_13_5_100.json  tpc_13_5_1000.json  tpc_13_5_300.json  tpc_13_6_100.json  tpc_13_6_1000.json  (+59 more)
queries/: tpc3-.txt  tpc_10(failed).json  tpc_12(failed).json  tpc_14.json  tpc_6.json  tpc_9(failed).json
(+25 files in other folders)
