cmake_minimum_required(VERSION 3.9.1)
project(aggregator)
set(CMAKE_CXX_STANDARD 23)
include_directories(jsoncpp/dist)
include_directories(emhash)
find_package(Threads REQUIRED)
#find_package(unordered_dense CONFIG REQUIRED)
#add_library(aggregator)
#set_property(TARGET aggregator PROPERTY CXX_STANDART 23)
add_executable(aggregator text.cpp jsoncpp/dist/json/json.h jsoncpp/dist/json/json-forwards.h jsoncpp/dist/jsoncpp.cpp emhash/hash_table8.hpp)
target_link_libraries(aggregator PUBLIC Threads::Threads)
#target_link_libraries(aggregator unordered_dense::unordered_dense)